start to work on finetuning code for traffic signs dataset

--- a/analysis/vit_example.ipynb
+++ b/analysis/vit_example.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0ae0d09b-cd45-460e-834f-91796bbfeb60",
+   "metadata": {},
+   "source": [
+    "## import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 117,
    "id": "0163fe26-1618-4dc5-b007-a96f181d4711",
@@ -19,6 +27,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79f2d19d-8afe-424a-8da1-f0d843f7e0e5",
+   "metadata": {},
+   "source": [
+    "## flow control"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 133,
    "id": "a1cada22-1ad1-4ba7-87db-803ca733e9a1",
@@ -28,6 +44,14 @@
     "summarize_model = False\n",
     "show_image_example = True\n",
     "# regenerate_data = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8208f73d-928a-4532-867d-2633179713ef",
+   "metadata": {},
+   "source": [
+    "## set up device and load pretrained model"
    ]
   },
   {
@@ -52,6 +76,14 @@
     "model.to(device)\n",
     "if summarize_model:\n",
     "    summary(model, input_size=(3,384,384)) # must be 384 for B_16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe8b9386-bf73-4a4d-a0bc-931e7179915c",
+   "metadata": {},
+   "source": [
+    "## split raw images into train and validation folders if needed"
    ]
   },
   {
@@ -87,6 +119,14 @@
    "outputs": [],
    "source": [
     "train_files, val_files = prepare_train_val(\"/mnt/data/projects/wankun01/playground/cv/rawdata/images/*\", \"/mnt/data/projects/wankun01/playground/cv/ViT-PyTorch/data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdfa6604-e2f8-43e8-b3be-2d8c1b8da156",
+   "metadata": {},
+   "source": [
+    "## load true labels for the data"
    ]
   },
   {
@@ -171,6 +211,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "139dd7dc-6c3c-4315-97b7-140d44c6ce79",
+   "metadata": {},
+   "source": [
+    "## load labels that model can predict"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 135,
    "id": "7a06dafe-7ccf-45d4-a68a-406acbb2c132",
@@ -188,6 +236,14 @@
     "labels_map = json.load(open('../examples/simple/labels_map.txt'))\n",
     "labels_map = [labels_map[str(i)] for i in range(1000)]\n",
     "print(labels_map[0:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5694f2-7145-49f7-b188-4023931066ea",
+   "metadata": {},
+   "source": [
+    "## perform single image prediction example"
    ]
   },
   {
@@ -251,12 +307,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6b7d079-582a-4683-b9e8-f34d91dc49e4",
+   "metadata": {},
+   "source": [
+    "## try finetune on the train dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02b5dde9-5ba0-4ea0-a815-7be3af461f5a",
+   "execution_count": 144,
+   "id": "1428790b-7337-4b33-81c1-d31b63472969",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## create our dataset \n",
+    "from  torch.utils.data import Dataset\n",
+    "class TrafficSignDataset(Dataset):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
@@ -264,7 +333,16 @@
    "id": "0d8c5266-5162-42a4-8357-417689901d58",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.train() # set to train mode, so all weights become trainable now.\n",
+    "tsfm = transforms.Compose([transforms.Resize(model.image_size), \n",
+    "                               transforms.ToTensor(), \n",
+    "                               transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5]),\n",
+    "                              ])\n",
+    "\n",
+    "for img in train_files:\n",
+    "    img = tsfm(img).unsqueeze(0)"
+   ]
   }
  ],
  "metadata": {
